# repo-brain

./: LICENSE  README.md  dev-thinking.md  repobrain_prd.md
.chroma/: chroma.sqlite3
.claude/: settings.local.json
analysis/: architecture_report.json  dependency_graph  dependency_graph.graphml  effort_estimation.json  feedback_history.json  impact_report.json  module_summaries.json  parsed_code.json  repository_summary.json
repobrain/: config.yaml  pyproject.toml
repobrain.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
repobrain/.chroma/: chroma.sqlite3
repobrain/analysis/: architecture_report.json  dependency_graph.graphml  effort_estimation.json  impact_report.json  module_summaries.json  parsed_code.json  repository_summary.json
repobrain/cli/: main.py
repobrain/config/: config.py
repobrain/src/architecture/: analyzer.py
repobrain/src/effort/: effort_estimator.py
repobrain/src/feedback/: feedback_manager.py  global_brain.py  seed_knowledge.json
repobrain/src/graph/: __init__.py  graph_builder.py
repobrain/src/impact/: impact_analyzer.py
repobrain/src/interpreter/: task_interpreter.py
repobrain/src/llm/: base.py  ollama_client.py  openai_client.py  rag.py
repobrain/src/parser/: __init__.py  parser.py
repobrain/src/scanner/: __init__.py  scanner.py
repobrain/src/summarizer/: flow_mapper.py  summarizer.py
repobrain/tests/: test_graph.py  test_parser.py  test_scanner.py
repobrain/ui/: app.py
